--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,14 +45,10 @@ jobs:
             el7: true
             rpmvers: 'el/7'
             debvers: 'ubuntu/xenial'
-            # to avoid git related error due to git version issue on
-            # stretch based image for el7 builds.
-            gorel_args: 'release --rm-dist --skip-validate'
           - golang_cross: 1.15
             el7: false
             rpmvers: 'el/8'
             debvers: 'ubuntu/bionic ubuntu/focal debian/jessie'
-            gorel_args: 'release --rm-dist'
 
     container: 'tykio/golang-cross:${{ matrix.golang_cross }}'
     outputs:
@@ -66,10 +62,16 @@ jobs:
           TOKEN: '${{ secrets.REPO_TOKEN }}'
         run: >
           git config --global url."https://${TOKEN}@github.com".insteadOf "https://github.com"
-      - name: Checkout of tyk
+
+      - name: Checkout of tyk for non-el7 builds.
+        if: ${{ matrix.golang_cross == '1.15' }}
         uses: actions/checkout@v2
         with:
           fetch-depth: ${{ ! startsWith(github.ref, 'refs/tags') }}
+
+      - name: Checkout of tyk for el7 builds
+        if: ${{ matrix.golang_cross == '1.15-el7' }}
+        uses: actions/checkout@v1
 
       - uses: docker/setup-qemu-action@v1
 
@@ -149,7 +151,7 @@ jobs:
       - uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: ${{ matrix.gorel_args }}
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
