--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -253,6 +253,7 @@ jobs:
           --title-link 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
 
   upgrade-deb:
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: goreleaser
     strategy:
@@ -295,6 +296,7 @@ jobs:
           push: false
 
   upgrade-rpm:
+    if: startsWith(github.ref, 'refs/tags')
     needs: goreleaser
     runs-on: ubuntu-latest
     strategy:
@@ -327,7 +329,6 @@ jobs:
           push: false
 
   smoke-tests:
-    if: needs.goreleaser.outputs.upload == 'true'
     needs:
       - goreleaser
     runs-on: ubuntu-latest
