--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -77,7 +77,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
+  skip_push: {{ .Env.EL7 }}
 
 # Build tykio/xDH_REPO, cloudsmith/xCOMPATIBILITY_NAME (arm64)
 - ids:
@@ -108,7 +108,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
+  skip_push: {{ .Env.EL7 }}
 
 - ids:
     - static-amd64
@@ -138,7 +138,7 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
+  skip_push: {{ .Env.EL7 }}
 
 # Build gateway hybrid container amd64
 - ids:
@@ -157,7 +157,7 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
-  skip_push: "{{ .Env.EL7 }}"
+  skip_push: {{ .Env.EL7 }}
 
 # Build gateway hybrid container arm64
 - ids:
@@ -176,7 +176,7 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
-  skip_push: "{{ .Env.EL7 }}"
+  skip_push: {{ .Env.EL7 }}
 
 # Build plugin-compiler
 - ids:
@@ -197,7 +197,6 @@ dockers:
   extra_files:
     - "images/plugin-compiler/"
     - "go.mod"
-  skip_push: "{{ .Env.EL7 }}"
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
