Upgrade tests with local artefacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -276,6 +276,10 @@ jobs:
         with:
           fetch-depth: 1
 
+      - uses: actions/download-artifact@v2
+        with:
+          name: deb
+
       - uses: docker/setup-qemu-action@v1
 
       - uses: docker/setup-buildx-action@v1
@@ -284,10 +288,11 @@ jobs:
         run: |
           echo 'FROM ${{ matrix.distro }}
           ARG TARGETARCH
+          COPY tyk-gateway*_${TARGETARCH}.deb /tyk-gateway.deb
           RUN apt-get update && apt-get install -y curl
 
           RUN curl -fsSL https://packagecloud.io/install/repositories/tyk/tyk-gateway-unstable/script.deb.sh | bash && apt-get install -y tyk-gateway=3.0.9~rc2
-          RUN apt-get install -y tyk-gateway' > Dockerfile
+          RUN dpkg -i tyk-gateway.deb' > Dockerfile
 
       - name: install on ${{ matrix.distro }}
         uses: docker/build-push-action@v2
@@ -313,15 +318,20 @@ jobs:
         with:
           fetch-depth: 1
 
+      - uses: actions/download-artifact@v2
+        with:
+          name: rpm
+
       - uses: docker/setup-buildx-action@v1
 
       - name: generate dockerfile
         run: |
           echo 'FROM registry.access.redhat.com/${{ matrix.distro }}
+          COPY tyk-gateway*_x86_64.rpm /tyk-gateway.rpm
           RUN yum install -y curl
 
           RUN curl -s https://packagecloud.io/install/repositories/tyk/tyk-gateway-unstable/script.rpm.sh | bash && yum install -y tyk-gateway-3.0.9~rc1-1
-          RUN yum install -y tyk-gateway' > Dockerfile
+          RUN rpm -Uvh tyk-gateway.rpm' > Dockerfile
 
       - name: install on ${{ matrix.distro }}
         uses: docker/build-push-action@v2
