--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -77,7 +77,6 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
 
 # Build tykio/xDH_REPO, cloudsmith/xCOMPATIBILITY_NAME (arm64)
 - ids:
@@ -108,7 +107,6 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
 
 - ids:
     - static-amd64
@@ -138,7 +136,6 @@ dockers:
     - "policies"
     - "coprocess"
     - "tyk.conf.example"
-  skip_push: "{{ .Env.EL7 }}"
 
 # Build gateway hybrid container amd64
 - ids:
@@ -157,7 +154,6 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
-  skip_push: "{{ .Env.EL7 }}"
 
 # Build gateway hybrid container arm64
 - ids:
@@ -176,13 +172,12 @@ dockers:
   dockerfile: images/hybrid/Dockerfile
   extra_files:
     - "images/hybrid/"
-  skip_push: "{{ .Env.EL7 }}"
 
 # Build plugin-compiler
 - ids:
     - std
   image_templates:
-    - tykio/tyk-plugin-compiler:{{ .Tag }}{{ if eq .Env.EL7 "true" }}-el7{{ end }}
+    - tykio/tyk-plugin-compiler:{{ .Tag }}
     - "tykio/tyk-plugin-compiler:v{{ .Major }}.{{ .Minor }}{{.Prerelease}}"
   build_flag_templates:
     - "--label=org.opencontainers.image.created={{.Date}}"
@@ -197,7 +192,6 @@ dockers:
   extra_files:
     - "images/plugin-compiler/"
     - "go.mod"
-  skip_push: false
 
 docker_manifests:
   - name_template: tykio/tyk-gateway:{{ .Tag }}
