Copy source instead of checkout in plugin-compiler.

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -3,8 +3,6 @@ ARG GOLANG_CROSS=1.15
 FROM tykio/golang-cross:${GOLANG_CROSS}
 LABEL description="Image for plugin development"
 
-ARG TYK_GW_TAG
-
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 
 ENV GO111MODULE=on
@@ -20,9 +18,8 @@ COPY images/plugin-compiler/data/build.sh /build.sh
 # RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 RUN chmod +x /build.sh
 
-RUN cd $TYK_GW_PATH &&  \
-    git clone --depth 1 --branch $TYK_GW_TAG  https://github.com/TykTechnologies/tyk . && \
-    go mod vendor
+COPY ./ $TYK_GW_PATH
+RUN cd $TYK_GW_PATH &&  go mod tidy && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
 
