revert back dockerfile change, remove plugin compiler workflow, is not necesary

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -12,7 +12,7 @@ ENV PLUGIN_SOURCE_PATH=/plugin-source
 ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
 RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
-COPY data/build.sh /build.sh
+COPY images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
 
 RUN curl -sL "https://api.github.com/repos/TykTechnologies/tyk/tarball/${TYK_GW_TAG}" | \
