--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -13,6 +13,9 @@ ENV GO111MODULE=on
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
 
+# Try upgrade certificates
+RUN apt-get upgrade ca-certificates
+
 RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH
 
 COPY images/plugin-compiler/data/build.sh /build.sh
