Fix COPY in Dockerfile for plugin-compiler build.

--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -18,7 +18,7 @@ COPY images/plugin-compiler/data/build.sh /build.sh
 # RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 RUN chmod +x /build.sh
 
-COPY ./ $TYK_GW_PATH
+COPY . $TYK_GW_PATH
 RUN cd $TYK_GW_PATH &&  go mod tidy && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
