Fix for plugin-compiler build.
- We'll now make a tarball of the source tree before
the goreleaser stage, and this tarball will be used to
make the source available during the plugin-compiler
build stage.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
             *.txt
 
 
-      - name: Fix vendor
+      - name: Fix vendor and make src tarball.
         run: |
           export GOPATH=/go
           mkdir -p /go/src || true
@@ -129,6 +129,8 @@ jobs:
           rm -rf vendor
           mkdir -p /go/src/github.com/TykTechnologies/tyk
           cp -r ./* /go/src/github.com/TykTechnologies/tyk
+          echo "Making a source tarball for plugin compiler build"
+          find . -name "*.go" -o -name "*.mod" -o -name "*.sum" | tar -czf src.tgz -T -
 
 
       - uses: goreleaser/goreleaser-action@v2
