--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -18,8 +18,9 @@ COPY images/plugin-compiler/data/build.sh /build.sh
 # RUN cd $TYK_GW_PATH && go mod tidy && go mod vendor
 RUN chmod +x /build.sh
 
-COPY . $TYK_GW_PATH
-RUN cd $TYK_GW_PATH &&  go mod tidy && go mod vendor
+COPY src.tgz .
+RUN tar -xzf src.tgz -C $TYK_GW_PATH
+RUN cd $TYK_GW_PATH && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
 
