--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,6 +137,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
+          GO111MODULE: off
           NFPM_STD_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           NFPM_PAYG_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           GPG_FINGERPRINT: 12B5D62C28F57592D1575BD51ED14C59E37DAC20
@@ -425,7 +426,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v3.0')
     runs-on: ubuntu-latest
     needs:
-      - smoke-tests
+      - goreleaser
+      - upgrade-rpm
     strategy:
       matrix:
         flavour:
