--- a/.goreleaser-el7.yml
+++ b/.goreleaser-el7.yml
@@ -152,10 +152,33 @@ dockers:
   goos: linux
   dockerfile: images/plugin-compiler/Dockerfile
   extra_files:
-    - "images/plugin-compiler/"
-    - "go.mod"
-    - "src.tgz"
-
+    - images/plugin-compiler
+    - go.mod
+    - apidef
+    - certs
+    - checkup
+    - cli
+    - config
+    - coprocess
+    - ctx
+    - dlpython
+    - dnscache
+    - gateway
+    - goplugin
+    - headers
+    - integration
+    - log
+    - regexp
+    - request
+    - rpc
+    - signature_validator
+    - storage
+    - tcp
+    - templates
+    - test
+    - testdata
+    - trace
+    - user
 
 checksum:
   disable: true
