--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
             *.txt
 
 
-      - name: Fix vendor and make src tarball.
+      - name: Fix vendor
         run: |
           export GOPATH=/go
           mkdir -p /go/src || true
@@ -129,8 +129,6 @@ jobs:
           rm -rf vendor
           mkdir -p /go/src/github.com/TykTechnologies/tyk
           cp -r ./* /go/src/github.com/TykTechnologies/tyk
-          echo "Making a source tarball for plugin compiler build"
-          find . -name "*.go" -o -name "*.mod" -o -name "*.sum" | tar -czf src.tgz -T -
 
 
       - uses: goreleaser/goreleaser-action@v2
