--- a/.goreleaser-el7.yml
+++ b/.goreleaser-el7.yml
@@ -55,6 +55,7 @@ nfpms:
     maintainer: "Tyk <info@tyk.io>"
     description: Tyk API Gateway
     package_name: tyk-gateway
+    file_name_template: '{{ .PackageName }}_{{ replace .Version "-" "~" }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}'
     builds:
 
       - std-linux
@@ -101,6 +102,7 @@ nfpms:
     bindir: "/opt/tyk-gateway"
     overrides:
       rpm:
+        file_name_template: '{{ .PackageName }}_{{ replace .Version "-" "~" }}-1.{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}'
         replacements:
           amd64: x86_64
           arm: aarch64
