--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -295,6 +295,7 @@ nfpms:
         replacements:
           amd64: x86_64
           arm: aarch64
+          arm64: aarch64
       deb:
         replacements:
           arm: arm64
