Update rpm file name template.

--- a/.goreleaser-el7.yml
+++ b/.goreleaser-el7.yml
@@ -102,7 +102,7 @@ nfpms:
     bindir: "/opt/tyk-gateway"
     overrides:
       rpm:
-        file_name_template: '{{ .PackageName }}_{{ replace .Version "-" "~" }}-1.{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}'
+        file_name_template: '{{ .PackageName }}-{{ replace .Version "-" "~" }}-1.{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}'
         replacements:
           amd64: x86_64
           arm64: aarch64
