--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -1,19 +1,23 @@
-# Go version here should match https://github.com/TykTechnologies/golang-cross/blob/master/.github/workflows/release.yml#L16
+ARG GOLANG_CROSS=1.15
 
-FROM golang:1.15.8-stretch
+FROM tykio/golang-cross:${GOLANG_CROSS}
 LABEL description="Image for plugin development"
 
-ARG TYK_GW_TAG
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
+
+ENV GO111MODULE=on
+
 # This directory will contain the plugin source and will be
 # mounted from the host box by the user using docker volumes
 ENV PLUGIN_SOURCE_PATH=/plugin-source
-# This is the temporary path where the plugin will be built
-ENV PLUGIN_BUILD_PATH=/go/src/plugin-build
 
-RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH $PLUGIN_BUILD_PATH
+RUN mkdir -p  $TYK_GW_PATH $PLUGIN_SOURCE_PATH
+
 COPY images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
+
+COPY . $TYK_GW_PATH
+RUN cd $TYK_GW_PATH && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
 
