--- a/images/plugin-compiler/Dockerfile
+++ b/images/plugin-compiler/Dockerfile
@@ -1,9 +1,7 @@
-# Go version here should match https://github.com/TykTechnologies/golang-cross/blob/master/.github/workflows/release.yml#L16
+ARG GOLANG_CROSS=1.15
 
-FROM golang:1.15.15-stretch
+FROM tykio/golang-cross:${GOLANG_CROSS}
 LABEL description="Image for plugin development"
-
-ARG TYK_GW_TAG
 
 ENV TYK_GW_PATH=/go/src/github.com/TykTechnologies/tyk
 
@@ -17,9 +15,8 @@ RUN mkdir -p $TYK_GW_PATH $PLUGIN_SOURCE_PATH
 COPY images/plugin-compiler/data/build.sh /build.sh
 RUN chmod +x /build.sh
 
-RUN cd $TYK_GW_PATH &&  \
-    git clone --depth 1 --branch $TYK_GW_TAG  https://github.com/TykTechnologies/tyk . && \
-    go mod vendor
+COPY . $TYK_GW_PATH
+RUN cd $TYK_GW_PATH && go mod vendor
 
 ENTRYPOINT ["/build.sh"]
 
