--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,6 +116,20 @@ jobs:
             *.txt.sig
             *.txt
 
+      - name: Fix vendor
+        run: |
+          export GOPATH=/go
+          mkdir -p /go/src || true
+          whereis go
+          go mod tidy
+          go mod vendor
+          echo "Moving vendor"
+          mv -f vendor/* $GOPATH/src
+          rm -rf vendor
+          mkdir -p /go/src/github.com/TykTechnologies/tyk
+          cp -r ./* /go/src/github.com/TykTechnologies/tyk
+          git checkout .
+
       - uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
@@ -123,6 +137,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 1
+          GO111MODULE: off
           NFPM_STD_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           NFPM_PAYG_PASSPHRASE: ${{ secrets.SIGNING_KEY_PASSPHRASE }}
           GPG_FINGERPRINT: 12B5D62C28F57592D1575BD51ED14C59E37DAC20
@@ -372,7 +387,7 @@ jobs:
 
       - name: Push to packagecloud
         id: pc-push
-        uses: TykTechnologies/packagecloud-action@main
+        uses: TykTechnologies/packagecloud-action@v1.1
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
         with:
@@ -411,7 +426,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v3.0')
     runs-on: ubuntu-latest
     needs:
-      - smoke-tests
+      - goreleaser
+      - upgrade-rpm
     strategy:
       matrix:
         flavour:
