--- a/ci/Dockerfile.std
+++ b/ci/Dockerfile.std
@@ -7,7 +7,7 @@
 # ./pr.zsh -repos tyk -base td-883-test -branch td-883-test -title Sync from latest releng templates
 # m4 -E -DxREPO=tyk
 
-FROM debian:buster-slim
+FROM debian:bullseye-slim
 ARG TARGETARCH
 
 RUN apt-get update \
