--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -115,6 +115,7 @@ jobs:
             -Dsonar.projectKey=TykTechnologies_tyk
             -Dsonar.sources=.
             -Dsonar.exclusions=coprocess/**/*
+            -Dsonar.exclusions=coprocess/**/*,ci/**,smoke-tests/**,apidef/oas/schema/schema.go
             -Dsonar.coverage.exclusions=**/*_test.go
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.tests=.
