add analytics dir to goreleaser extra files

--- a/ci/goreleaser/goreleaser-el7.yml
+++ b/ci/goreleaser/goreleaser-el7.yml
@@ -158,6 +158,7 @@ dockers:
   extra_files:
     - ci/images/plugin-compiler
     - go.mod
+    - analytics
     - apidef
     - certs
     - checkup
